[project]
name = "devassist"
version = "0.1.0"
description = "A production-ready Model Context Protocol (MCP) server for development automation."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.28.1",
    "mcp[cli]>=1.9.2",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "jinja2>=3.0.0",
]
